--- a/service_state/vs2008_csharp/ServiceState/ServiceState.csproj
+++ b/service_state/vs2008_csharp/ServiceState/ServiceState.csproj
@@ -36,6 +36,15 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Messaging" />
+    <Reference Include="System.Runtime.Serialization">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.ServiceModel.Web">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -58,6 +67,8 @@
     <Compile Include="Common\State.cs" />
     <Compile Include="Common\Stream.cs" />
     <Compile Include="Common\StreamObservable.cs" />
+    <Compile Include="Common\TCPClientStream.cs" />
+    <Compile Include="Common\TCPServerStream.cs" />
     <Compile Include="Common\UDPStream.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -89,7 +100,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Service\TCPTestService.cs" />
     <Compile Include="Service\TestService.cs" />
+    <Compile Include="State\TCPTestStateA.cs" />
     <Compile Include="State\TestState.cs" />
     <Compile Include="State\TestStateA.cs" />
     <Compile Include="State\TestStateB.cs" />
