service管理をServiceManagerに変更

--- a/service_state/vs2008_cpp/Common/Common.vcproj
+++ b/service_state/vs2008_cpp/Common/Common.vcproj
@@ -165,6 +165,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\ServiceManager.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\State.cpp"
 				>
 			</File>
@@ -200,6 +204,10 @@
 			</File>
 			<File
 				RelativePath=".\Service.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ServiceManager.h"
 				>
 			</File>
 			<File
