--- a/service_state/vs2008_csharp/ServiceState/ServiceState.csproj
+++ b/service_state/vs2008_csharp/ServiceState/ServiceState.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Common\Event.cs" />
     <Compile Include="Common\IServiceObserver.cs" />
     <Compile Include="Common\IStreamObserver.cs" />
+    <Compile Include="Common\MessageBase.cs" />
     <Compile Include="Common\ReaderIni.cs" />
     <Compile Include="Common\Service.cs" />
     <Compile Include="Common\ServiceManager.cs" />
@@ -109,6 +110,7 @@
     <Compile Include="State\UDPTestStateB.cs" />
     <Compile Include="State\UDPTestStateC.cs" />
     <Compile Include="Test\BitConverterExTest.cs" />
+    <Compile Include="Test\MessageStructTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
