--- a/service_state/vs2008_cpp/Common/Common.vcproj
+++ b/service_state/vs2008_cpp/Common/Common.vcproj
@@ -153,6 +153,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Date.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Event.cpp"
 				>
 			</File>
@@ -162,6 +166,10 @@
 			</File>
 			<File
 				RelativePath=".\Locker.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\LogManager.cpp"
 				>
 			</File>
 			<File
@@ -195,6 +203,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Date.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Event.h"
 				>
 			</File>
@@ -204,6 +216,10 @@
 			</File>
 			<File
 				RelativePath=".\Locker.h"
+				>
+			</File>
+			<File
+				RelativePath=".\LogManager.h"
 				>
 			</File>
 			<File
