--- a/service_state/vs2008_cpp/ServiceState/ServiceState.vcproj
+++ b/service_state/vs2008_cpp/ServiceState/ServiceState.vcproj
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="winmm.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="1"
